--- a/src/styles/search-bar.css
+++ b/src/styles/search-bar.css
@@ -1,14 +1,11 @@
 /*****************************
-    FORMS
+    COLOUR PALLET
 ******************************/
 /*****************************
-    COLOUR PALLET
+    FORMS
 ******************************/
 /**********
     FORM SIZES
-***********/
-/**********
-    FORM COLOURS
 ***********/
 .search-form {
   position: absolute;
@@ -45,3 +42,13 @@
 
 .form-control {
   margin-bottom: 15px; }
+
+.input-group-addon {
+  padding: 0; }
+
+.radio-label {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 0;
+  padding: 6px 12px; }
