--- a/src/styles/search-bar.scss
+++ b/src/styles/search-bar.scss
@@ -54,3 +54,15 @@
 .form-control {
   margin-bottom: $input-margin-bottom;
 }
+
+.input-group-addon {
+  padding: 0;
+}
+
+.radio-label {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 0;
+  padding: 6px 12px;
+}
